--- a/DataAccessTypesBase/app.css
+++ b/DataAccessTypesBase/app.css
@@ -1,11 +1,12 @@
 .bgc{
-	background-color:black;
-	margin: 0px;
+  background-color:black;
+  margin: 0px;
 }
 
 body{
-	overflow: hidden;
-	margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin: 0;
 }
 
 html{
@@ -14,16 +15,16 @@ html{
 }
 
 #domo_table {
-  width: 99.5%;
+  width: 99.7%;
   text-align: center;
   border-style: solid;
-  border-width: 3px;
+  border-width: 1px;
   border-color: black;
   padding: 0px;
   margin: 0px;
   background: white;
   overflow: auto;
-  height: 120px;
+  height: 100px;
 }
 
 #domo_footer {
@@ -39,34 +40,22 @@ html{
 }
 
 .domoTitle {
+  width: 100%;
   background-color: blue;
   color: white;
 }
 
-
 #jquery_table {
-  width: 99.5%;
+  width: 99.7%;
   text-align: center;
   border-style: solid;
-  border-width: 3px;
+  border-width: 1px;
   border-color: black;
   padding: 0px;
   margin: 0px;
   background: white;
   overflow: auto;
-  height: 140px;
-}
-
-#jquery_dlabel, #jquery_clabel, #jquery_rlabel {
-  width: 100%;
-  height: :20px;
-  font-size: 18px;
-  text-align: center;
-  padding: 0px;
-  margin: 0px;
-  background: black;
-  color: red;
-  overflow: auto;
+  height: 120px;
 }
 
 #jquery_footer {
@@ -89,29 +78,60 @@ html{
   background-color: yellow;
 }
 
+#xhr_table {
+  width: 99.7%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  padding: 0px;
+  margin: 0px;
+  background: white;
+  overflow: auto;
+  height: 140px;
+}
+
+#xhr_footer {
+  width: 100%;
+  height: :20px;
+  font-size: 18px;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+  background: green;
+  color: white;
+  overflow: auto;
+}
+
+.xhrTitle {
+  background-color: green;
+  color: white;
+}
+
+
 span {
   display: inline-block;
   width: 200px;
 }
 
 #title{
-	text-align: center;
-	font-size: 24px;
-	color: yellow !important;
-	padding: 0px;
-	background-color:black;
-	width:100%;
-	height: 105px;
-	margin: 0 auto;
-	border:1px solid black;
+  text-align: center;
+  font-size: 24px;
+  color: yellow !important;
+  padding: 0px;
+  background-color:black;
+  width:100%;
+  height: 105px;
+  margin: 0 auto;
+  border:1px solid black;
 }
 
 .build, .logo, .date{
-	line-height: 105px;
-	float:left;
-	width:33%;
-	height: 105px;
-	vertical-align: middle;
+  line-height: 105px;
+  float:left;
+  width:33%;
+  height: 105px;
+  vertical-align: middle;
 }
 
 div {
@@ -126,15 +146,15 @@ p {
 }
 
 .tbold {
-	font-size: 24px;
-	font-weight: bolder;
+  font-size: 24px;
+  font-weight: bolder;
 }
 
 .avatar{
-	 width: 60px;
-	 height: 60px;
+   width: 60px;
+   height: 60px;
 }
 
 .namew, .agew, .idw, .datew, .colw {
-	width: 50px;
+  width: 50px;
 }
