--- a/DataAccessTypesBase/app.css
+++ b/DataAccessTypesBase/app.css
@@ -108,6 +108,36 @@ html{
   color: white;
 }
 
+#oboe_table {
+  width: 99.7%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  padding: 0px;
+  margin: 0px;
+  background: white;
+  overflow: auto;
+  height: 120px;
+}
+
+#oboe_footer {
+  width: 100%;
+  height: :20px;
+  font-size: 18px;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+  background: orange;
+  color: white;
+  overflow: auto;
+}
+
+.oboeTitle {
+  width: 100%;
+  background-color: orange;
+  color: white;
+}
 
 span {
   display: inline-block;
