--- a/other/cory/css/sCalc.css
+++ b/other/cory/css/sCalc.css
@@ -1,26 +1,9 @@
-body{
-  margin: 0;
-  padding: 0;
-  width: 460px;
-}
-
-h1 {
-	margin: 0;
-	padding: 0;
-	text-align: center;
-}
-
-content {
+.main {
 	position: absolute;
-	top: 23px;
-	width: calc(100% - 2px);
-	height: calc(100% - 25px);
-	background-color: lightblue;
-}
-
-
-.content {
-	border: 1px solid black;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: orange;
 }
 
 #answer {
