qa working on menu
working gone menu, pages work, server list is populating

--- a/other/qualityAssurance/css/app.css
+++ b/other/qualityAssurance/css/app.css
@@ -50,6 +50,8 @@ p {
 
 .halfWidth {width: 50%;}
 
+.fullheight{height: 100%; min-height: 100%;}
+
 .mLeft {margin-left: 20%;}
 .mTop {//margin-top: 10px;}
 
