working on sprint menus

--- a/other/qualityAssurance/css/sprint.css
+++ b/other/qualityAssurance/css/sprint.css
@@ -6,8 +6,7 @@
 	background-color: lightgray;
 }
 
-
-table {
+/*table {
 	border-collapse: collapse;
 	margin: 0px;
 	padding: 0px;
@@ -16,29 +15,17 @@ thead, th, tr, td, tbody {
 	margin: 0px;
 	padding: 0px;
 }
-
-p {
-	margin: 0px;
-	padding: 0px;
-}
+*/
 
 .clear {
   clear: both;			
 }
 
-#page {
+/*#page {
 	height: 100%;
 	width: 100%;
 }
-
-#buttonOptions {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 50px;
-	line-height: 50px;
-}
-
+*/
 #contentSection {
 	position: absolute;
 	top: 50px;
@@ -52,7 +39,10 @@ p {
 	bottom: 0px;
 	height: 22px;
 	width: 100%;
+	color: #fff;
+	background-color: #707F8A;
 }
+
 .message {
 	position: absolute;
 	right: 10px;
@@ -64,11 +54,15 @@ p {
 }
 
 #fire {
-//	height: 540px;
-//	height: calc(100% - 22px);
+/*
+	height: 540px;
+	height: calc(100% - 22px);
+*/
 	height: 100%;
-//	width: 1165px;
-//	overflow: hidden;
+/*
+	width: 1165px;
+	overflow: hidden;
+*/
 }
 
 #fireText {
@@ -79,7 +73,7 @@ p {
 	width: 100%;
 }
 
-.pTop {margin-top: 15px;}
+/*.pTop {margin-top: 15px;}*/
 
 
 .title {
@@ -91,80 +85,6 @@ p {
 	font-weight: bold;
 	border-bottom: 1px solid black;
 }
-
-/*.infoTitle {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-	color: #000;
-}
-*/
-/* Navigation Start */
-#navItem {
-   //width:100%;
-}
-#navItem ul {
-//   clear:left;
-//   float:left;
-//   list-style:none;
-   margin:0;
-   padding:0;
-//   text-align:center;
-}
-#navItem ul li {
-	display:block;
-	float:left;
-//   list-style:none;
-   margin:0;
-   padding:0;
-//   position:relative;
-}
-#navItem ul li a button{
-//   display:block;
-//   margin:0 0 0 1px;
-//   padding:3px 10px;
-//   background:#ddd;
-//   color:#000;
-//   text-decoration:none;
-//   line-height:1.3em;
-}
-#navItem ul li button a:hover {
-//	color: red;
-//	background-color: blue;
-}
-#navItem ul li button a.active,
-#navItem ul li button a.active:hover {
-//   color:#fff;
-//   background:#000;
-//   font-weight:bold;
-}
-
-.tabrow li button {
-//  text-shadow: 0.5px 0.5px #FFF;
-//  margin: 0px;
-  padding: 0px;
-}
-
-.buttonM {
-	margin-left: 20px;
-}
-
-li#sprint2 a input {
-//  background: url("/images/home.png") no-repeat;
-//  color: #000000;
-//  cursor: pointer;
-//  font-weight: bold;
-//  height: 80px;
-//  padding-bottom: 2px;
-//  width: 75px;
-}
-
-button {
-	width: 100px;
-	border : 0px;
-	font-size: 16px;
-}
-/* Navigation End */
 
 #sectionTitle {
 	width: 100%;
@@ -194,26 +114,104 @@ button {
 .tableRows {font-weight: normal;}
 
 /* Field Widths */
-/*
-.wsquad {width: 15%; float: left; text-align: center; white-space: nowrap;}
-*/
 .wsquad {width: 150px; float: left; text-align: center; white-space: wrap;}
 .wstatus {width: 5%; float: left; text-align: center; white-space: nowrap;}
-/*
-.wjira {width: 10%; float: left; text-align: center; white-space: nowrap;}
-*/
 .wjira {width: 150px; float: left; text-align: center;}
-/*
-.wsummary {width: 20%; float: left; text-align: left;}
-*/
 .wsummary {width: calc(100% - 400px); float: left; text-align: left;}
 .wnotes {width: 20%; float: left; text-align: left;}
 .wreason {width: 10%; float: left; text-align: left;}
-/*
-.wsprint {width: 10%; float: left; text-align: left; white-space: nowrap;}
-*/
 .wsprint {width: 100px; float: left; text-align: center; white-space: nowrap;}
 .wtest {width: 10%; float: left; text-align: left;}
+
+.intro {
+	font-size: 90px;
+	font-weight: 700;
+	text-align: center;
+	line-height: 150px;
+}
+
+/* Navigation Start */
+
+.serverNav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 50px;
+	line-height: 50px;
+	background-color: #707F8A;
+	width:100%;
+}
+
+.serverNav ul {
+	list-style: none;
+	height: 20px;
+	line-height: 50px;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+.serverNav li {
+	font-family: OpenSans, sans-serif;
+	font-size: 1.0em;
+	font-weight: bold;
+	// padding-left: 20px;
+	text-align: center;
+	width: 105px;
+	float: left;
+}
+
+.serverNav a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  transition: .3s background-color;
+}
+.serverNav a:hover {
+	background-color: #99ccee;
+	color: #000;
+	font-weight: bolder;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+}
+
+.serverNav a.active {
+  background-color: #fff;
+  color: #707F8A;
+  cursor: default;
+}
+
+@media screen and (min-width: 600px) {
+  .nav li {
+    width: 120px;
+    border-bottom: none;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.4em;
+  }
+ 
+  /* Option 1 - Display Inline */
+  .nav li {
+    display: inline-block;
+    margin-right: -4px;
+  }
+ 
+  /* Options 2 - Float
+  .nav li {
+    float: left;
+  }
+  .nav ul {
+    overflow: auto;
+    width: 600px;
+    margin: 0 auto;
+  }
+  .nav {
+    background-color: #707F8A;
+  }
+  */
+}
+
+/* Navigation End */
 
 /* Traditional clearfix */
 .clearfix:after {
@@ -231,10 +229,3 @@ button {
 /* Custom CSS for the page layout */
 .columns .column1 {float: left;}
 .columns .column2 {float: left;}
-
-.intro {
-	font-size: 90px;
-	font-weight: 700;
-	text-align: center;
-	line-height: 150px;
-}
