--- a/other/qualityAssurance/css/teams.css
+++ b/other/qualityAssurance/css/teams.css
@@ -1,7 +1,110 @@
-.main {
+.teamMain {
 	position: absolute;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: lightyellow;
+	background-color: #fff;
+}
+
+#teamBody {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	background-color: #99ccee;
+}
+
+.titleFade {
+	opacity: 1;
+	height: 100%;
+	width: 100%;
+	line-height: 500px;
+	font-size: 48;
+	font-style: bolder;
+	background-color: #99ccee;
+}
+.titleFade.hide {
+	opacity: 0;
+	transition: all 3s ease;
+}
+
+.teamFade {
+	opacity: 0;
+}
+.teamFade.show {
+	opacity: 1;
+	transition: all 2s ease;
+}
+
+#teamLayout {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	height: 100%;
+	width: 100%;
+}
+
+#teamText {
+	height: 30px;
+	line-height: 30px;
+	width: 100%;
+	background-color: #707F8A;
+	color: #fff;
+	border-bottom: 1px black solid;
+	margin-right: 20px;
+}
+
+.squadList {
+	width: 100%;
+	height: calc(100% - 31px);
+	display: inline-block;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+/*	widths	*/
+.teamsList {width: 18%; min-width: 200px;min-height: 20px;text-align: center;}
+.qaList{width: 18%; min-width: 200px;min-height: 20px;text-align: center;}
+.featuresList{width: 64%; min-width: 200px;min-height: 20px;}
+/* width end */
+
+/*  Row coloring */
+.teamLight {background-color: #fff;color: #000;}
+.teamDark {background-color: #bedef4;}
+
+.aR1 {}
+.aR1:hover{
+	background-color: #d9d9d9;
+	transition: all 0.3s ease;
+}
+
+.aR2 {}
+.aR2:hover{
+	background-color: #92c8ed;
+	transition: all 0.3s ease;
+}
+
+.md {color: crimson;font-weight: bold;}
+.md:hover {color: crimson;}
+
+/* squad info pane */
+.squadInfo {
+	position: absolute;
+	right: 0;
+	top: 31px;
+	width: 60%;
+	background-color: skyblue;
+	height: 0;
+	z-index: 100;
+}
+
+.squadInfo.show {
+	height: calc(100% - 31px);
+	opacity: 1;
+	transition: all 1s ease;
+}
+
+.squadInfo.hide {
+	height: 0;
+	opacity: 0;
+	transition: all 1s ease;
 }
