--- a/other/qualityAssurance/css/app.css
+++ b/other/qualityAssurance/css/app.css
@@ -39,6 +39,11 @@ p {
 	padding: 0px;
 }
 
+#footer {
+//	background-color: #707F8A;
+	transition: all 2s ease;
+}
+
 .clear {
   clear: both;			
 }
