--- a/other/qualityAssurance/css/hotfix.css
+++ b/other/qualityAssurance/css/hotfix.css
@@ -1,9 +1,148 @@
-.titleFade {
+.hotfixtitleFade {
 	opacity: 1;
 	height: 50%;
 	width: 100%;
 	line-height: 500px;
 	font-size: 48;
 	font-style: bolder;
-//	background-color: #FFE5CC;
+	background-color: #FFE5CC;
 }
+
+// copied from team page cleanup names
+
+.hotfixMain {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: calc(100% - 22px);
+	background-color: #FFE5CC;
+}
+
+#hotfixBody {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	background-color: #99ccee;
+}
+
+.hotfixTitleFade {
+	opacity: 1;
+	height: 100%;
+	width: 100%;
+	line-height: 500px;
+	font-size: 48;
+	font-style: bolder;
+	background-color: #FFE5CC;
+}
+.hotfixTitleFade.hide {
+	opacity: 0;
+	background-color: #fccf84;
+	transition: all 3s ease;
+}
+
+.hotfixFade {
+	background-color: #FFE5CC;
+	opacity: 0;
+}
+.hotfixFade.show {
+	background-color: #FFE5CC;
+	opacity: 1;
+	transition: all 2s ease;
+}
+
+#hotfixLayout {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	height: 100%;
+	width: 100%;
+}
+
+#hotfixText {
+	height: 30px;
+	line-height: 30px;
+	width: 100%;
+	background-color: #fccf84;
+	color: #fff;
+	border-bottom: 1px black solid;
+	margin-right: 20px;
+}
+
+.squadList {
+	width: 100%;
+	height: calc(100% - 31px);
+	display: inline-block;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.lHeight{line-height: 50px;}
+.fHeight{height: 100%;}
+.bb1 {border-bottom: 1px solid black;}
+
+/*	widths	*/
+/*.teamsList {width: 100%;text-align: center;}*/
+.qaList{width: 50%; text-align: center;}
+.areaList{width: 50%; text-align: center;}
+.squadWidth {
+	width: 33.33%;
+	float: left;
+	text-align: center;
+}
+/* width end */
+
+.bravo {background-color: #E3A869;}
+.charlie {background-color: #71C671;}
+.delta {background:#7D9Ec0}
+.cLead {font-size: 18px;font-weight: bolder;color: #ccddee;}
+
+/* squad info pane */
+.squadInfo {
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	background-color: fccf84;
+	height: 30px;
+	line-height: 30px;
+	//font-weight: bolder;
+	font-size: 1.2em;
+	text-transform: capitalize;
+}
+
+.squadInfo.show {
+	height: calc(100% - 22px);
+}
+
+.squadInfo.hide {
+	height: 30px;
+	transition: all 2s ease;
+}
+
+#footer {
+	background-color: #99ccee;
+	color: #fff;
+	transition: all 2s ease;
+}
+
+/*  Row coloring */
+/*
+.hfLight {background-color: #fff;color: #000;}
+.hfDark {background-color: #bedef4;}
+.hfDark {background:rgba(0,255,0,.2);}
+
+.R1 {}
+.R1:hover{
+	background-color: #d9d9d9;
+	transition: all 0.3s ease;
+}
+
+.R2 {}
+.R2:hover{
+	background-color: #92c8ed;
+	transition: all 0.3s ease;
+}
+
+.md {color: crimson;font-weight: bold;}
+.md:hover {color: crimson;}
+
+*/
