--- a/other/qualityAssurance/css/sprint.css
+++ b/other/qualityAssurance/css/sprint.css
@@ -19,12 +19,9 @@
 }
 
 #footer {
-	position: absolute;
-	bottom: 0px;
-	height: 22px;
-	width: 100%;
 	color: #fff;
 	background-color: #707F8A;
+	transition: all 2s ease;
 }
 
 .message {
