--- a/other/qualityAssurance/css/teams.css
+++ b/other/qualityAssurance/css/teams.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 22px);
 	background-color: #fff;
 }
 
@@ -107,4 +107,9 @@
 	height: 0;
 	opacity: 0;
 	transition: all 1s ease;
+}
+
+#footer {
+	background-color: #707F8A;
+	transition: all 2s ease;
 }
