--- a/other/qualityAssurance/index.css
+++ b/other/qualityAssurance/index.css
@@ -121,7 +121,7 @@ body {
 
 #newstuff {
 	position: absolute;
-	bottom: 0px;
+	bottom: 0;
 	left: -10px;
 	color: #000;
 	width: 100%;
@@ -135,7 +135,8 @@ body {
 #div-new:hover #newstuff {
 	color: #000;
   	bottom: 12px;
-	height: 100px;
+	height: auto;
+	padding-bottom: 12px;
 	opacity: 1;
 	transition: all 0.4s ease;
 }
@@ -146,7 +147,34 @@ body {
 	background-color: #99ccee;
 }
 
+/* Helpful Links */
+.linkLocation {
+	position: absolute;
+	bottom: 1px;
+	width: 200px;
+	height: 22px;
+	left: calc(50% - 100px);
+	z-index: 101;
+//	background-color: red;
+	background-image: url(linkClean.png);
+	background-size: 50px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
 
+.linkLocation a {
+	text-decoration: none;
+	font-size: 1.5em;
+	line-height: 22px;
+	color: #fff;
+	opacity: 0;
+}
+
+.linkLocation:hover {
+	background-color: rgba(0,32,125,0.3);	
+}
+
+/* links end */
 
 /* Traditional clearfix */
 .clearfix:after {
