--- a/other/qualityAssurance/css/hotfix.css
+++ b/other/qualityAssurance/css/hotfix.css
@@ -23,21 +23,21 @@
 	opacity: 1;
 	height: 100%;
 	width: 100%;
-	background-color: #FFE5CC;
+	background-color: ##7D9Ec0;
 }
 
 .hotfixTitleFade.hide {
 	opacity: 0;
-	background-color: #fccf84;
+	background-color: ##7D9Ec0;
 	transition: all 3s ease;
 }
 
 .hotfixFade {
-	background-color: #fccf84;
+	background-color: ##7D9Ec0;
 	opacity: 0;
 }
 .hotfixFade.show {
-	background-color: #FFE5CC;
+	background-color: ##7D9Ec0;
 	height: 100%;
 	width: 100%;
 	opacity: 1;
@@ -107,26 +107,3 @@
 	color: #fff;
 	transition: all 2s ease;
 }
-
-/*  Row coloring */
-/*
-.hfLight {background-color: #fff;color: #000;}
-.hfDark {background-color: #bedef4;}
-.hfDark {background:rgba(0,255,0,.2);}
-
-.R1 {}
-.R1:hover{
-	background-color: #d9d9d9;
-	transition: all 0.3s ease;
-}
-
-.R2 {}
-.R2:hover{
-	background-color: #92c8ed;
-	transition: all 0.3s ease;
-}
-
-.md {color: crimson;font-weight: bold;}
-.md:hover {color: crimson;}
-
-*/
