--- a/other/qualityAssurance/index.css
+++ b/other/qualityAssurance/index.css
@@ -151,27 +151,21 @@ body {
 .linkLocation {
 	position: absolute;
 	bottom: 1px;
-	width: 200px;
+	width: 60px;
 	height: 22px;
-	left: calc(50% - 100px);
+	left: calc(50% - 30px);
 	z-index: 101;
-//	background-color: red;
 	background-image: url(linkClean.png);
 	background-size: 50px;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 
-.linkLocation a {
-	text-decoration: none;
-	font-size: 1.5em;
-	line-height: 22px;
-	color: #fff;
-	opacity: 0;
-}
+.linkLocation a {opacity: 0;}
 
 .linkLocation:hover {
-	background-color: rgba(0,32,125,0.3);	
+	z-index: 100;
+	background-image: url(linkDark.png);
 }
 
 /* links end */
