--- a/other/qualityAssurance/css/home.css
+++ b/other/qualityAssurance/css/home.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	line-height: 500px;
 	font-size: 48;
-	font-style: bolder;
+	//font-style: bolder;
 //	background-color: #FFE5CC;
 }
 
@@ -16,9 +16,32 @@
 	font-style: bolder;
 	font-size: 16;
 	right: 0px;
-	background-color: #fccf84;
+	background-color: #DC9A2C;
 	width: 21%;
 }
+
+.hscLocation2 {
+	position: absolute;
+	top: 0;
+	z-index: 999;
+	text-align: right;
+	font-style: bolder;
+	right: 0px;
+	width: 250px;
+	min-width: 250px;
+	max-width: 250px;
+	height: calc(100% - 23px);
+}
+
+.displayNextTitle2 {
+	height: 20px;
+	line-height: 20px;
+	text-align: left;
+	background-color: #F8A550;
+	border-bottom: 1px black solid;
+	border-left: 1px black solid;
+}
+
 .displayNextTitle {
 	bottom: 63px;
 	border: 1px black solid;
@@ -36,18 +59,66 @@
 	border-left: 1px black solid;
 }
 
+.displayNextSquad2 {
+	line-height: 40px;
+	bottom: 23px;
+	height: 40px;
+	font-style: bolder;
+	font-weight: bolder;
+	border-bottom: 1px black solid;
+	border-left: 1px black solid;
+	background-color: #fccf84;
+}
+
 .lSquad {
 	padding-right: 5px;
 	padding-left: 10px;
 	border-right: 1px black solid;
 }
+.lSquad2 {
+	padding-right: 5px;
+	padding-left: 5px;
+	border-right: 1px black solid;
+}
+
 .lDay {
 	padding-right: 5px;
 	padding-left: 5px;
 	border-right: 1px black solid;
 }
+.lDay2 {
+	padding-right: 5px;
+	padding-left: 5px;
+	border-right: 1px black solid;
+}
+
 .lDate {
 	padding-left: 5px;
+}
+
+.lDate2 {
+	padding-right: 10px;
+	padding-left: 5px;
+}
+
+.hscList2 {
+	position: absolute;
+	top: 62;
+	right: 0px;
+	width: 250px;
+	min-width: 250px;
+	max-width: 250px;
+//	height: calc(100% - 83px);
+	overflow-y: auto;
+	background-color: #F8A550;
+}
+
+.displayNextSquad3 {
+	line-height: 40px;
+//	bottom: 23px;
+//	height: 40px;
+	border-bottom: 1px black solid;
+	border-left: 1px black solid;
 }
 
 .button {
